add multilanguage feature(ru,kz)
